# vibevoice

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: index.css  index.html  main.js  overlay.css  overlay.html  overlay.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: tray-128.rgba  window-48.rgba
src-tauri/src/: audio.rs  clipboard.rs  config.rs  context.rs  focus.rs  format.rs  hotkey.rs  lib.rs  main.rs  transcription.rs
