[package]
name = "vibe-voice-tool"
version = "0.1.0"
description = "Voice-to-text push-to-talk tool for Vibe Coder"
authors = ["you"]
edition = "2021"

[lib]
name = "vibe_voice_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
] }
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["multipart", "json"] }
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
